--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/vdct/ProjetDuMois#readme",
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jstransformer-markdown-it": "^2.1.0",
     "mapbox-gl": "^1.10.1",
+    "node-fetch": "^2.6.0",
     "pug": "^3.0.0"
   }
 }
