--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ProjetDuMois.fr est un tableau de bord pour encourager les contributions aux Projets du mois d'OpenStreetMap en France.",
   "main": "website/index.js",
   "scripts": {
-    "start": "node website/index.js",
+    "start": "node --icu-data-dir=node_modules/full-icu website/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "full-icu": "^1.3.1",
     "jstransformer-markdown-it": "^2.1.0",
     "mapbox-gl": "^1.10.1",
     "node-fetch": "^2.6.0",
