--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "full-icu": "^1.3.1",
     "jstransformer-markdown-it": "^2.1.0",
     "mapbox-gl": "^1.10.1",
+    "marked": "^1.1.0",
     "node-fetch": "^2.6.0",
     "pug": "^3.0.0"
   }
