--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "website/index.js",
   "scripts": {
     "start": "node --icu-data-dir=node_modules/full-icu website/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "project:update": "node db/10_project_update.js"
   },
   "repository": {
     "type": "git",
