--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mapbox-gl": "^1.10.1",
     "marked": "^1.1.0",
     "node-fetch": "^2.6.0",
+    "osm-auth": "^1.0.2",
     "pg": "^8.3.0",
     "pug": "^3.0.0"
   }
