--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node --icu-data-dir=node_modules/full-icu website/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "project:update": "rm -f db/09_project_update_tmp.sh && node db/10_project_update.js"
+    "project:update": "rm -f db/09_project_update_tmp.sh && node db/10_project_update.js",
+    "features:update": "rm -f db/21_features_update_tmp.sh && node db/20_features_update.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "full-icu": "^1.3.1",
+    "js-yaml": "^3.14.0",
     "jstransformer-markdown-it": "^2.1.0",
     "mapbox-gl": "^1.10.1",
     "marked": "^1.1.0",
