--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.0",
+    "bootstrap.native": "^3.0.10",
     "chart.js": "^2.9.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
