--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "osm-auth": "^1.0.2",
     "osm-request": "^1.2.10",
     "pg": "^8.3.0",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "swiped-events": "^1.1.4"
   }
 }
