--- a/config.example.json
+++ b/config.example.json
@@ -16,5 +16,9 @@
 	"DB_USER": "postgres",
 	"DB_PASS": "postgres",
 	"DB_NAME": "pdm",
-	"WORK_DIR": "/tmp/pdm"
+	"WORK_DIR": "/tmp/pdm",
+	"GEOJSON_BOUNDS": {
+		"type": "Polygon",
+		"coordinates": [ [ [ 55.02777, -21.55017 ], [ 56.08795, -21.55017 ], [ 56.08795, -20.73556 ], [ 55.02777, -20.73556 ], [ 55.02777, -21.55017 ] ] ]
+	}
 }
