--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "osm-auth": "^1.0.2",
     "osm-request": "^1.2.10",
     "pg": "^8.3.0",
+    "pic4carto": "^2.1.12",
     "pug": "^3.0.0",
     "swiped-events": "^1.1.4",
     "wordcloud": "^1.1.1"
