Display mapillary pictures as background layer (fixes #15)

--- a/config.example.json
+++ b/config.example.json
@@ -7,6 +7,7 @@
 	"OSMOSE_URL": "https://osmose.openstreetmap.fr",
 	"NOMINATIM_URL": "https://nominatim.openstreetmap.org",
 	"MAPILLARY_URL": "https://www.mapillary.com",
+	"MAPILLARY_API_KEY": "yourtoken",
 	"REPOSITORY_URL": "https://github.com/vdct/ProjetDuMois",
 	"JOSM_REMOTE_URL": "http://localhost:8111",
 	"OSH_PBF_URL": "https://osm-internal.download.geofabrik.de/europe/france/reunion-internal.osh.pbf",
