--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-yaml": "^3.14.0",
     "jstransformer-markdown-it": "^2.1.0",
     "mapbox-gl": "^1.12.0",
+    "mapillary-js": "^3.1.0",
     "marked": "^1.1.0",
     "node-fetch": "^2.6.1",
     "osm-auth": "^1.0.2",
