--- a/config.example.json
+++ b/config.example.json
@@ -13,7 +13,7 @@
   "REPOSITORY_URL": "https://github.com/vdct/ProjetDuMois",
   "JOSM_REMOTE_URL": "http://localhost:8111",
   "OSH_PBF_URL": "https://osm-internal.download.geofabrik.de/europe/france/reunion-internal.osh.pbf",
-  "MAPBOX_STYLE": "https://tile-vect.openstreetmap.fr/styles/liberty/style.json",
+  "VECT_STYLE": "https://tile-vect.openstreetmap.fr/styles/liberty/style.json",
   "PDM_TILES_URL": "http://localhost:7800",
   "DB_USE_IMPOSM_UPDATE": true,
   "WORK_DIR": "/tmp/pdm",
