--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "i18n": "^0.13.2",
     "js-yaml": "^3.14.0",
     "jstransformer-markdown-it": "^2.1.0",
-    "mapbox-gl": "^1.12.0",
+    "maplibre-gl": "^1.15.3",
     "mapillary-js": "^4.0.0",
     "marked": "^1.1.0",
     "node-fetch": "^2.6.7",
