--- a/config.example.json
+++ b/config.example.json
@@ -12,7 +12,9 @@
   "MATOMO_SITE": "6",
   "REPOSITORY_URL": "https://github.com/vdct/ProjetDuMois",
   "JOSM_REMOTE_URL": "http://localhost:8111",
-  "OSH_PBF_URL": "https://osm-internal.download.geofabrik.de/europe/france/reunion-internal.osh.pbf",
+  "OSH_PBF_URL": "https://osm-internal.download.geofabrik.de/europe/france/france-internal.osh.pbf",
+  "OSM_PBF_URL": "http://download.openstreetmap.fr/extracts/europe/france-latest.osm.pbf",
+  "POLY_URL": "https://download.geofabrik.de/europe/france.poly",
   "VECT_STYLE": "https://tile-vect.openstreetmap.fr/styles/liberty/style.json",
   "PDM_TILES_URL": "http://localhost:7800",
   "DB_USE_IMPOSM_UPDATE": true,
