--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "projetdumoisfr",
+  "name": "podoma",
   "version": "0.5.0",
-  "description": "ProjetDuMois.fr est un tableau de bord pour encourager les contributions aux Projets du mois d'OpenStreetMap en France.",
+  "description": "Podoma is a powerful, full-featured, engine and dashboard for getting precise statistics about OpenStreetMap community contributions over specific topics.",
   "main": "website/index.js",
   "scripts": {
     "build:turf": "browserify node_modules/@turf/boolean-contains/index.js -s turf > website/static/turf.js",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vdct/ProjetDuMois.git"
+    "url": "git+https://gitlab.com/PanierAvide/Podoma.git"
   },
-  "author": "ProjetDuMois.fr",
+  "author": "Podoma",
   "license": "AGPL-3.0",
   "bugs": {
-    "url": "https://github.com/vdct/ProjetDuMois/issues"
+    "url": "https://gitlab.com/PanierAvide/Podoma/-/issues"
   },
-  "homepage": "https://github.com/vdct/ProjetDuMois#readme",
+  "homepage": "https://gitlab.com/PanierAvide/Podoma",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@turf/boolean-contains": "^6.0.1",
