--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,8 @@
 {
+  "WEBSITE_NAME": "Podoma",
+  "WEBSITE_MOTTO": "The OpenStreetMap statistics engine",
+  "WEBSITE_URL": "https://podoma.fr",
+  "WEBSITE_DESCRIPTION": "Podoma is a powerful, full-featured, engine and dashboard for getting precise statistics about OpenStreetMap community contributions over specific topics.",
   "OSM_URL": "https://www.openstreetmap.org",
   "OSM_API_URL": "https://api.openstreetmap.org",
   "OSM_USER": "user",
