Update JS dependencies, various fixes

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "website/index.js",
   "scripts": {
-    "build:turf": "browserify node_modules/@turf/boolean-contains/index.js -s turf > website/static/turf.js",
+    "build:turf": "browserify node_modules/@turf/boolean-contains/dist/cjs/index.cjs -s turf > website/static/turf.js",
     "start": "node --icu-data-dir=node_modules/full-icu website/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "features:update": "rm -f db/11_features_update_tmp.sh && node db/10_features_update.js",
@@ -25,32 +25,33 @@
   },
   "homepage": "https://github.com/vdct/ProjetDuMois",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "@turf/boolean-contains": "^6.0.1",
-    "bootstrap": "^4.5.0",
-    "bootstrap.native": "^3.0.10",
-    "chart.js": "^2.9.4",
-    "compression": "^1.7.4",
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "@turf/boolean-contains": "^7.2.0",
+    "bootstrap": "^4.6.2",
+    "bootstrap.native": "^4.2.0",
+    "chart.js": "^4.5.1",
+    "chartjs-adapter-moment": "^1.0.1",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "full-icu": "^1.3.1",
-    "i18n": "^0.13.2",
-    "js-yaml": "^3.14.0",
-    "jstransformer-markdown-it": "^2.1.0",
-    "maplibre-gl": "^1.15.3",
-    "mapillary-js": "^4.0.0",
-    "marked": "^1.1.0",
-    "node-fetch": "^2.6.7",
-    "osm-auth": "^2.5.0",
+    "express": "^5.1.0",
+    "full-icu": "^1.5.0",
+    "i18n": "^0.15.3",
+    "js-yaml": "^4.1.0",
+    "jstransformer-markdown-it": "^3.0.0",
+    "mapillary-js": "^4.1.2",
+    "maplibre-gl": "^5.12.0",
+    "marked": "^17.0.0",
+    "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
+    "osm-auth": "^3.1.1",
     "osm-request": "^2.0.0",
-    "pg": "^8.5.1",
-    "pic4carto": "^2.1.12",
-    "pug": "^3.0.1",
-    "swiped-events": "^1.1.4",
-    "tag2link": "^2021.3.21",
-    "wordcloud": "^1.1.1"
+    "pg": "^8.16.3",
+    "pug": "^3.0.3",
+    "swiped-events": "^1.2.0",
+    "tag2link": "^2025.10.21",
+    "wordcloud": "^1.2.3"
   },
   "devDependencies": {
-    "browserify": "^16.5.2"
+    "browserify": "^17.0.1"
   }
 }
