--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/vdct/ProjetDuMois",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@panoramax/web-viewer": "^4.2.0",
     "@turf/boolean-contains": "^7.2.0",
     "bootstrap": "^4.6.2",
     "bootstrap.native": "^4.2.0",
