Change repository name & URL

--- a/config.example.json
+++ b/config.example.json
@@ -15,7 +15,7 @@
   "PANORAMAX_URL": "https://explore.panoramax.fr",
   "MATOMO_HOST": "https://stats.domaine.fr/",
   "MATOMO_SITE": "6",
-  "REPOSITORY_URL": "https://github.com/vdct/ProjetDuMois",
+  "REPOSITORY_URL": "https://github.com/osm-fr/podoma",
   "JOSM_REMOTE_URL": "http://localhost:8111",
   "OSH_PBF_AUTHORIZED": true,
   "OSH_PBF_URL": "https://osm-internal.download.geofabrik.de/europe/france/france-internal.osh.pbf",
