Improve missing members search with Overpass

--- a/config.example.json
+++ b/config.example.json
@@ -8,6 +8,7 @@
   "OSM_USER": "user",
   "OSM_PASS": "pass",
   "OSM_CLIENT_ID": "id",
+  "OVERPASS_URL": "https://overpass-api.de/api/interpreter",
   "OSMOSE_URL": "https://osmose.openstreetmap.fr",
   "NOMINATIM_URL": "https://nominatim.openstreetmap.org",
   "MAPILLARY_URL": "https://www.mapillary.com",
